# docbase

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: architecture.md  roadmap.md
include/docbase/: cli.hpp  fileReader.hpp
src/: cli.cpp  fileReader.cpp  main.cpp  placeholder.cpp
tests/: sample.txt
